--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <hr>
     <p>Beste Grüße,<br>
     Nils Neumann</p>
+    <div style="display:none;">
+    <hr>
+    <p><small>Diese PDF ist ein Auszug einer Webseite vom Januar 2015. Für aktuellere Informationen besuchen Sie bitte die Webseite <a href="http://kirbyintro.pxwrk.de/">kirbyintro.pxwrk.de</a>.</small></p>
+    </div>
   </div>
 </body>
 </html>
