--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     </div>
   </div>
   <div class="width-wrap" style="margin: 0 auto 12em; font-size: 20px">
-    <p>Deine neue Webseite ist fertig gestellt, und du möchtest dir einen grundlegenden Überblick über dein neues Content Management System namens <a href="http://getkirby.com/">Kirby</a> verschaffen? Dann bist du hier richtig. Diese Seite soll dir den Einstieg zu erleichtern und dir die Möglichkeit geben ab und zu mal nachschlagen zu können, falls nötig. Bei Fragen und Anregungen, freue ich mich auf deine Email an <a style="white-space:nowrap" href="mailto:mail@der-zyklop.de">mail@der-zyklop.de</a>. Los gehts...</p>
-    <p>Du möchtest also Inhalte auf deiner Webseite von Zeit zu Zeit ändern. Dazu melde dich im CMS an. Angenommen die Adresse deiner Webseite sei <code>example.org</code>, dann erreichst du den Login-Bereich unter <code>example.org/panel</code>.
+    <p>Ihre neue Webseite ist fertig gestellt, und sie möchten sich einen grundlegenden Überblick über ihr neues Content Management System namens <a href="http://getkirby.com/">Kirby</a> verschaffen? Dann sind sie hier richtig. Diese Seite soll ihnen den Einstieg erleichtern und ihnen die Möglichkeit geben ab und zu mal nachschlagen zu können, falls nötig. Bei Fragen und Anregungen, freue ich mich auf ihre Email an <a style="white-space:nowrap" href="mailto:mail@der-zyklop.de">mail@der-zyklop.de</a>. Los gehts...</p>
+    <p>Sie möchten also Inhalte auf ihrer Webseite von Zeit zu Zeit ändern. Dazu melden sie sich im CMS an. Angenommen die Adresse ihrer Webseite sei <code>example.org</code>, dann erreichen sie den Login-Bereich unter <code>example.org/panel</code>.
     <img src="assets/images/001.png" alt="">
-    Gib dort den dir zugeteilten Benutzernahmen und dein Passwort an. Du landest als allererstes auf einer Wilkommens-Seite.</p>
+    Geben sie dort den ihnen zugeteilten Benutzernahmen und ihr Passwort an. Sie landen als allererstes auf einer Wilkommens-Seite.</p>
     <img src="assets/images/002.png" alt="">
-    <p>Falls du das zum ersten mal siehst, solltest du als allererstes dein Passwort ändern. Klicke dazu auf deinen Account und trage die fehlenden Daten ein und speichere deine Änderungen.</p>
+    <p>Falls sie das zum ersten mal sehen, sollten sie als allererstes ihr Passwort ändern. Klicken sie dazu auf ihren Account, tragen sie die fehlenden Daten ein und speichern sie die Änderungen ab.</p>
     <img src="assets/images/003.png" alt="">
-    <p>Über das Menü üben links kommst du immer wieder zurück auf die Übersicht.</p>
+    <p>Über das Menü oben links kommen sie immer wieder zurück auf die Übersicht.</p>
     <img src="assets/images/004.png" alt="">
-    <p>Schau dir als nächstes die erste Seite an.</p>
+    <p>Schauen sie sich als nächstes die erste Seite an.</p>
     <img src="assets/images/005.png" alt="">
-    <p>Hier kann es schon dir ersten kleineren Unterschiede geben von deiner Webseite und meinen Beispiel-Bildern. Doch der Grundaufbau ist der selbe. Auf der linken Seite hast du die Möglichkeit Unterseiten anzulegen und Dateien wie z.B. Bilder für diese Seite anzulegen, und auf der rechten Seite kannst du Inhalte wie z.B. Texte anpassen.</p>
+    <p>Hier kann es schon die ersten kleineren Unterschiede geben zwischen ihrer Webseite und meinen Beispiel-Bildern. Doch der Grundaufbau ist der selbe. Auf der linken Seite haben sie die Möglichkeit Unterseiten, und Dateien wie z.B. Bilder für diese Seite anzulegen. Auf der rechten Seite können sie Inhalte wie z.B. Texte anpassen.</p>
     <img src="assets/images/006.png" alt="">
     <p>In der folgenden Aufnahme zeige ich, wie ich eine Bild-Datei, welche auf meinem persönlichen Computer liegt, in die Beispiel-Webseite einbinde.</p>
     <img src="assets/images/bild-hochladen.gif" alt="">
     <p>Nun zeige ich die verschiedenen Möglichkeiten der Text-Formatierung in Kirby.</p>
     <img src="assets/images/text-formatieren.gif" alt="">
-    <p>Manche Menschen vermissen hier im ersten Moment die »Gestaltungsfreiheit«, die sie von weit verbreiteten Textverarbeitungsprogrammen gewohnt sind. Aber das hat einen guten Grund. Das Aussehen der Farben und Formen deiner Texte, sowie die sinnvolle Anordnung der Bilder etc. wurde auf deiner Webseite schon größtenteils vordefiniert. Hast du deine Webseite von einem/einer ausgebildeten, professionellen Designer/in erstellen lassen? Dann hat er/sie sich bereits Gedanken dazu gemacht. Z.B. wie deine Texte am besten dargestellt werden müssen, damit du möglichst viele Menschen, egal ob mit Sehschwäche, körperlichen oder technischen Einschränkungen, erreichen kannst. Designer und Programmierer von Webseiten machen sich täglich Gedanken über diese Fragen. Vertrau ihnen ;)</p>
+    <p>Manche Menschen vermissen hier im ersten Moment die »Gestaltungsfreiheit«, die sie von weit verbreiteten Textverarbeitungsprogrammen gewohnt sind. Aber das hat einen guten Grund. Das Aussehen der Farben und Formen ihrer Texte, sowie die sinnvolle Anordnung der Bilder etc. wurde auf ihrer Webseite schon größtenteils vordefiniert. Haben sie ihrer Webseite von einem/einer ausgebildeten, professionellen Designer/in erstellen lassen, so hat er/sie sich bereits Gedanken dazu gemacht. Z.B. wie ihre Texte am besten dargestellt werden müssen, damit sie möglichst viele Menschen, egal ob mit Sehschwäche, körperlichen oder technischen Einschränkungen, erreichen können. Designer und Programmierer von Webseiten machen sich täglich Gedanken über diese Fragen. Vertrauen sie ihnen ;)</p>
     <img src="assets/images/007.png" alt="">
-    <p>Zurück auf der Übersich klicke ich auf das kleine Plus-Zeichen bei »Seiten«, und werde anschließend nach einem Titel der anzulegenden Seite gefragt. Sobald ich diese Seite angelegt habe, erscheint sie in meiner Liste der vorhandenen Seiten.</p>
+    <p>Zurück auf der Übersicht klicke ich auf das kleine Plus-Zeichen bei »Seiten«, und werde anschließend nach einem Titel der anzulegenden Seite gefragt. Sobald ich diese Seite angelegt habe, erscheint sie in meiner Liste der vorhandenen Seiten.</p>
     <img src="assets/images/008.png" alt="">
-    <p>Neu angelegte Seiten können zwar inhaltlich sofort bearbeitet werden, sind aber zur Sicherheit immer erstmal »unsichtbar« (wird nicht im Menü meiner Webseite angezeigt). Klicke ich auf den kleinen Stift neben dem Plus-Zeichen, dann kann ich die Sichtbarkeit der einzelnen Seiten bearbeiten.</p>
+    <p>Neu angelegte Seiten können zwar inhaltlich sofort bearbeitet werden, sind aber zur Sicherheit immer erstmal »unsichtbar« (unsichtbare Seiten werden nicht im Menü meiner Webseite angezeigt). Klicke ich auf den kleinen Stift neben dem Plus-Zeichen, dann kann ich die Sichtbarkeit der einzelnen Seiten bearbeiten.</p>
     <img src="assets/images/sichtbarkeit.gif" alt="">
-    <p>Das war’s erstmal. Ich gehe jetzt erstmal nicht weiter in die Tiefe, denn was ab jetzt kommt, erklärt sich entweder von selbst oder bezieht sich nicht auf »Kirby« algemein, sondern speziell auf deine neue Webseite. Aber wie gesagt – wenn noch Fragen offen sind, dann helfe ich gerne.<br>Schreib mir am besten eine <a href="mailto:mail@der-zyklop.de">Email</a>.</p>
+    <p>Das war’s erstmal. Ich gehe jetzt erstmal nicht weiter in die Tiefe, denn was ab jetzt kommt, erklärt sich entweder von selbst oder bezieht sich nicht auf »Kirby« algemein, sondern speziell auf ihre neue Webseite. Aber wie gesagt – wenn noch Fragen offen sind, dann helfe ich gerne.<br>Schreiben sie mir am besten eine kurze <a href="mailto:mail@der-zyklop.de">Email</a>, ich melde mich dann bei Ihnen.</p>
     <hr>
     <p>Beste Grüße,<br>
     Nils Neumann</p>
