--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     </div>
   </div>
   <div class="width-wrap" style="margin: 0 auto 12em; font-size: 20px">
-    <p>Ihre neue Webseite ist fertig gestellt, und sie möchten sich einen grundlegenden Überblick über ihr neues Content Management System namens <a href="http://getkirby.com/">Kirby</a> verschaffen? Dann sind sie hier richtig. Diese Seite soll ihnen den Einstieg erleichtern und ihnen die Möglichkeit geben ab und zu mal nachschlagen zu können, falls nötig. Bei Fragen und Anregungen, freue ich mich auf ihre Email an <a style="white-space:nowrap" href="mailto:mail@der-zyklop.de">mail@der-zyklop.de</a>. Los gehts...</p>
-    <p>Sie möchten also Inhalte auf ihrer Webseite von Zeit zu Zeit ändern. Dazu melden sie sich im CMS an. Angenommen die Adresse ihrer Webseite sei <code>example.org</code>, dann erreichen sie den Login-Bereich unter <code>example.org/panel</code>.
+    <p>Ihre neue Webseite ist fertig gestellt, und Sie möchten sich einen grundlegenden Überblick über Ihr neues Content-Management-System namens <a href="http://getkirby.com/">Kirby</a> verschaffen? Dann sind Sie hier richtig. Diese Seite soll Ihnen den Einstieg erleichtern und Ihnen die Möglichkeit geben nachschlagen zu können, falls nötig. Bei Fragen und Anregungen freue ich mich auf Ihre Email an <a style="white-space:nowrap" href="mailto:mail@der-zyklop.de">mail@der-zyklop.de</a>. Los gehts...</p>
+    <p>Um Inhalte auf Ihrer Webseite zu ändern, melden Sie sich als erstes im CMS an. Angenommen die Adresse Ihrer Webseite ist <code>example.org</code>, dann erreichen Sie den Login-Bereich unter <code>example.org/panel</code>.
     <img src="assets/images/001.png" alt="">
-    Geben sie dort den ihnen zugeteilten Benutzernahmen und ihr Passwort an. Sie landen als allererstes auf einer Wilkommens-Seite.</p>
+    Geben Sie dort den Ihnen zugeteilten Benutzernamen und Ihr Passwort an. Sie landen zunächst auf einer Wilkommens-Seite.</p>
     <img src="assets/images/002.png" alt="">
-    <p>Falls sie das zum ersten mal sehen, sollten sie als allererstes ihr Passwort ändern. Klicken sie dazu auf ihren Account, tragen sie die fehlenden Daten ein und speichern sie die Änderungen ab.</p>
+    <p>Falls Sie das zum ersten mal sehen, sollten Sie als erstes Ihr Passwort ändern. Klicken Sie dazu auf Ihren Account, tragen Sie die fehlenden Daten ein und speichern Sie die Änderungen ab.</p>
     <img src="assets/images/003.png" alt="">
-    <p>Über das Menü oben links kommen sie immer wieder zurück auf die Übersicht.</p>
+    <p>Über das Menü oben links kommen Sie immer wieder auf die Übersicht zurück.</p>
     <img src="assets/images/004.png" alt="">
-    <p>Schauen sie sich als nächstes die erste Seite an.</p>
+    <p>Schauen Sie sich als nächstes die erste Seite an.</p>
     <img src="assets/images/005.png" alt="">
-    <p>Hier kann es schon die ersten kleineren Unterschiede geben zwischen ihrer Webseite und meinen Beispiel-Bildern. Doch der Grundaufbau ist der selbe. Auf der linken Seite haben sie die Möglichkeit Unterseiten, und Dateien wie z.B. Bilder für diese Seite anzulegen. Auf der rechten Seite können sie Inhalte wie z.B. Texte anpassen.</p>
+    <p>Hier kann es schon die ersten kleineren Unterschiede geben zwischen Ihrer Webseite und meinen Beispiel-Bildern. Doch der Grundaufbau ist gleich. Auf der linken Seite haben Sie die Möglichkeit Unterseiten und Dateien wie z.B. Bilder für diese Seite anzulegen. Auf der rechten Seite können Sie Inhalte wie z.B. Texte anpassen.</p>
     <img src="assets/images/006.png" alt="">
     <p>In der folgenden Aufnahme zeige ich, wie ich eine Bild-Datei, welche auf meinem persönlichen Computer liegt, in die Beispiel-Webseite einbinde.</p>
     <img src="assets/images/bild-hochladen.gif" alt="">
     <p>Nun zeige ich die verschiedenen Möglichkeiten der Text-Formatierung in Kirby.</p>
     <img src="assets/images/text-formatieren.gif" alt="">
-    <p>Manche Menschen vermissen hier im ersten Moment die »Gestaltungsfreiheit«, die sie von weit verbreiteten Textverarbeitungsprogrammen gewohnt sind. Aber das hat einen guten Grund. Das Aussehen der Farben und Formen ihrer Texte, sowie die sinnvolle Anordnung der Bilder etc. wurde auf ihrer Webseite schon größtenteils vordefiniert. Haben sie ihrer Webseite von einem/einer ausgebildeten, professionellen Designer/in erstellen lassen, so hat er/sie sich bereits Gedanken dazu gemacht. Z.B. wie ihre Texte am besten dargestellt werden müssen, damit sie möglichst viele Menschen, egal ob mit Sehschwäche, körperlichen oder technischen Einschränkungen, erreichen können. Designer und Programmierer von Webseiten machen sich täglich Gedanken über diese Fragen. Vertrauen sie ihnen ;)</p>
+    <p>Manche Nutzer vermissen hier im ersten Moment die »Gestaltungsfreiheit«, die Sie von weit verbreiteten Textverarbeitungsprogrammen gewohnt sind. Aber das hat einen guten Grund. Das Aussehen der Farben und Formen Ihrer Texte, sowie die sinnvolle Anordnung der Bilder etc. wurde auf Ihrer Webseite schon größtenteils vordefiniert. Haben Sie Ihrer Webseite von einem/einer ausgebildeten, professionellen Designer/in erstellen lassen, so hat er/sie sich bereits Gedanken dazu gemacht. Z.B. wie Ihre Texte am besten dargestellt werden müssen, damit Sie möglichst viele Menschen, egal ob mit Sehschwäche, körperlichen oder technischen Einschränkungen, erreichen können. Designer und Programmierer von Webseiten machen sich täglich Gedanken über diese Fragen. Vertrauen Sie Ihnen ;)</p>
     <img src="assets/images/007.png" alt="">
-    <p>Zurück auf der Übersicht klicke ich auf das kleine Plus-Zeichen bei »Seiten«, und werde anschließend nach einem Titel der anzulegenden Seite gefragt. Sobald ich diese Seite angelegt habe, erscheint sie in meiner Liste der vorhandenen Seiten.</p>
+    <p>Zurück auf der Übersicht klicken Sie auf das kleine Plus-Zeichen bei »Seiten« und werden anschließend nach einem Titel der anzulegenden Seite gefragt. Sobald Sie diese Seite angelegt haben, erscheint sie in Ihrer Liste der vorhandenen Seiten.</p>
     <img src="assets/images/008.png" alt="">
-    <p>Neu angelegte Seiten können zwar inhaltlich sofort bearbeitet werden, sind aber zur Sicherheit immer erstmal »unsichtbar« (unsichtbare Seiten werden nicht im Menü meiner Webseite angezeigt). Klicke ich auf den kleinen Stift neben dem Plus-Zeichen, dann kann ich die Sichtbarkeit der einzelnen Seiten bearbeiten.</p>
+    <p>Neu angelegte Seiten können zwar inhaltlich sofort bearbeitet werden, sind aber zur Sicherheit immer erstmal »unsichtbar« (unsichtbare Seiten werden nicht im Menü Ihrer Webseite angezeigt). Klicken Sie auf den kleinen Stift neben dem Plus-Zeichen, dann können Sie die Sichtbarkeit der einzelnen Seiten bearbeiten.</p>
     <img src="assets/images/sichtbarkeit.gif" alt="">
-    <p>Das war’s erstmal. Ich gehe jetzt erstmal nicht weiter in die Tiefe, denn was ab jetzt kommt, erklärt sich entweder von selbst oder bezieht sich nicht auf »Kirby« algemein, sondern speziell auf ihre neue Webseite. Aber wie gesagt – wenn noch Fragen offen sind, dann helfe ich gerne.<br>Schreiben sie mir am besten eine kurze <a href="mailto:mail@der-zyklop.de">Email</a>, ich melde mich dann bei Ihnen.</p>
+    <p>Das war’s erstmal. Ich gehe jetzt erstmal nicht weiter in die Tiefe, denn was ab jetzt kommt, erklärt sich entweder von selbst oder bezieht sich nicht auf »Kirby« allgemein, sondern speziell auf Ihre neue Webseite. Aber wie gesagt – wenn noch Fragen offen sind, dann helfe ich gerne.<br>Schreiben Sie mir am besten eine kurze <a href="mailto:mail@der-zyklop.de">Email</a>, ich melde mich dann bei Ihnen.</p>
     <hr>
     <p>Beste Grüße,<br>
     Nils Neumann</p>
